// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Usermotion's track destination action: all fields 1`] = `
Object {
  "anonymousId": "D7eiUOIRWs#EuRzn@d)n",
  "email": "riknonolu@refe.sa",
  "event": "D7eiUOIRWs#EuRzn@d)n",
  "properties": Object {
    "testType": "D7eiUOIRWs#EuRzn@d)n",
  },
  "userId": "D7eiUOIRWs#EuRzn@d)n",
}
`;

exports[`Testing snapshot for Usermotion's track destination action: required fields 1`] = `
Object {
  "event": "D7eiUOIRWs#EuRzn@d)n",
  "properties": Object {},
  "userId": "D7eiUOIRWs#EuRzn@d)n",
}
`;
